# esp_st7789_lvgl

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  config.env  flash_app_args  flash_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json
bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp-idf/: cmake_install.cmake
esp-idf/app_trace/: cmake_install.cmake
esp-idf/app_update/: cmake_install.cmake
esp-idf/bootloader/: cmake_install.cmake
esp-idf/bootloader_support/: cmake_install.cmake
esp-idf/bt/: cmake_install.cmake
esp-idf/cmock/: cmake_install.cmake
esp-idf/console/: cmake_install.cmake
esp-idf/cxx/: cmake_install.cmake
esp-idf/driver/: cmake_install.cmake
esp-idf/efuse/: cmake_install.cmake
esp-idf/esp-tls/: cmake_install.cmake
esp-idf/esp_adc/: cmake_install.cmake
esp-idf/esp_app_format/: cmake_install.cmake
esp-idf/esp_bootloader_format/: cmake_install.cmake
ext_components/: lv_conf.h
main/: CMakeLists.txt  main.c
main/components/PID/: PID.c  PID.h  PID_temp.c  PID_temp.h
main/components/disp/: disp_draw.c  disp_draw.h  st7789.h
main/components/driver/: disp_draw.c  disp_draw.h  st7789.c  st7789.h
main/components/driver/encoder/: EncoderRead.c  EncoderRead.h  encoder.c  encoder.h
main/components/ext_devices/dh22/: DHT.c  DHT.h
main/components/ext_devices/encoder/: encoder.c  encoder.h
main/components/ext_devices/fun/: fun.c
main/components/ext_devices/max6675/: max6675_init.c  max6675_init.h
main/components/ui/: ui.c  ui.h  ui_helpers.c
main/components/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
(+99 files in other folders)
